Removed the title and age fields from the User model.     Added a new field called locationId to the User model.     Implemented a custom exception class for handling User-related exceptions, including a custom error message and HTTP request error code.     Added a postMapping method in the controller for creating new User objects.

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,19 @@
 			<scope>test</scope>
 		</dependency>
 
+<!--		validation-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>6.1.7.Final</version>
+			<type>pom</type>
+		</dependency>
+
 		<!-- JPA -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
