--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,17 @@ spring.datasource.url=jdbc:mysql://localhost:3306/comments
 spring.datasource.username=root
 spring.datasource.password=abc123
 
+
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+server.port = 8082
+spring.h2.console.enabled=true
+server.error.include-message=always
+spring.validation.defaultMessage=my_custom_message
+spring.validation.constraints.NotNull.showMessage=true
+
+
