Created test classes for Comment.

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+<!--		h2-DataBase-->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 		<!--Mysql-->
 		<dependency>
 			<groupId>com.mysql</groupId>
