--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/comments
-spring.datasource.username=root
-spring.datasource.password=abc123
+#spring.datasource.url=jdbc:mysql://localhost:3306/comments
+#spring.datasource.username=root
+#spring.datasource.password=abc123
 
 
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
@@ -14,5 +14,4 @@ spring.h2.console.enabled=true
 server.error.include-message=always
 spring.validation.defaultMessage=my_custom_message
 spring.validation.constraints.NotNull.showMessage=true
-
 
