--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -38,8 +38,8 @@ spring:
     show-sql: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://team-21-database.cfire0z0jguy.eu-north-1.rds.amazonaws.com:3306/comments
-    username: admin
-    password: NEWCASTLE
+    url: jdbc:mysql://localhost:3306/comments
+    username: root
+    password: 123456789
 
 ## ddl-auto will need to be changed to different mode
